--- a/rick-and-morty-app/src/app/app.component.html
+++ b/rick-and-morty-app/src/app/app.component.html
@@ -1,6 +1,18 @@
-<Header>Angular</Header>
-<main>
-	<h2>Rick and Morty</h2>
+<header class="text-center my-5">
+	<h1>Rick and Morty</h1>
+	<p>Characters</p>
+</header>
+<main class="d-flex flex-wrap gap-5 justify-content-center">
+	@for (elemento of todosLosDatos; track elemento.id) {
+	<div class="card" style="border-radius: 50px">
+		<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+		<div class="card-body">
+			<h5 class="card-title text-center">{{ elemento.name }}</h5>
+			<p class="card-text text-center">{{ elemento.gender }} - {{ elemento.species }}</p>
+			<p class="card-text text-center">{{ elemento.location.name }}</p>
+		</div>
+	</div>
+	}
 </main>
-<footer>Personajes</footer>
+<footer class="text-center my-5">&copy; 2024</footer>
 <!-- <router-outlet></router-outlet> -->
