--- a/rick-and-morty-app/src/app/app.component.css
+++ b/rick-and-morty-app/src/app/app.component.css
@@ -1,3 +1,20 @@
 .header-img {
-	width: 30rem;
+	width: 20rem;
+}
+
+.card {
+	border-radius: 50px;
+	border: 4px solid black;
+}
+
+.page {
+	font-family: "Rock Salt", cursive;
+	font-weight: 400;
+	font-style: normal;
+}
+
+@media only screen and (min-width: 601px) {
+	.header-img {
+		width: 30rem;
+	}
 }
