--- a/rick-and-morty-app/src/app/app.component.html
+++ b/rick-and-morty-app/src/app/app.component.html
@@ -1,20 +1,36 @@
 <header class="text-center bg-dark">
 	<h1>
-		<img src="../assets/multimedia/tittle-ram.png" class="header-img" alt="rick and morty" />
+		<img src="../assets/multimedia/title-ram.png" class="header-img" alt="rick and morty" />
 	</h1>
 	<p class="bg-warning p-4 m-0">Characters</p>
 </header>
-<main class="d-flex flex-wrap gap-5 justify-content-center p-4">
-	@for (elemento of todosLosDatos; track elemento.id) {
-	<div class="card" style="border-radius: 50px">
-		<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
-		<div class="card-body">
-			<h5 class="card-title text-center">{{ elemento.name }}</h5>
-			<p class="card-text text-center">{{ elemento.gender }} - {{ elemento.species }} - {{ elemento.status }}</p>
-			<p class="card-text text-center">{{ elemento.location.name }}</p>
+<main>
+	<div class="d-flex flex-wrap gap-5 justify-content-center pt-3">
+		@for (elemento of todosLosDatos; track elemento.id) {
+		<div class="card">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<p class="card-text text-center">{{ elemento.gender }} - {{ elemento.species }} - {{ elemento.status }}</p>
+				<p class="card-text text-center">{{ elemento.location.name }}</p>
+			</div>
 		</div>
+		}
 	</div>
-	}
+	<hr />
+	<h2 class="text-center pb-5 page">Page 2</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center pt-3">
+		@for (elemento of todosLosDatos2; track elemento.id) {
+		<div class="card" style="border-radius: 50px">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<p class="card-text text-center">{{ elemento.gender }} - {{ elemento.species }} - {{ elemento.status }}</p>
+				<p class="card-text text-center">{{ elemento.location.name }}</p>
+			</div>
+		</div>
+		}
+	</div>
 </main>
 <footer class="text-center py-5 bg-warning">&copy; 2024</footer>
 <!-- <router-outlet></router-outlet> -->
