agregado mas paginas y barra de nav

--- a/rick-and-morty-app/src/app/app.component.html
+++ b/rick-and-morty-app/src/app/app.component.html
@@ -4,33 +4,237 @@
 	</h1>
 	<p class="bg-warning p-4 m-0">Characters</p>
 </header>
+<nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-recycle resaltado" viewBox="0 0 16 16">
+				<path
+					d="M9.302 1.256a1.5 1.5 0 0 0-2.604 0l-1.704 2.98a.5.5 0 0 0 .869.497l1.703-2.981a.5.5 0 0 1 .868 0l2.54 4.444-1.256-.337a.5.5 0 1 0-.26.966l2.415.647a.5.5 0 0 0 .613-.353l.647-2.415a.5.5 0 1 0-.966-.259l-.333 1.242zM2.973 7.773l-1.255.337a.5.5 0 1 1-.26-.966l2.416-.647a.5.5 0 0 1 .612.353l.647 2.415a.5.5 0 0 1-.966.259l-.333-1.242-2.545 4.454a.5.5 0 0 0 .434.748H5a.5.5 0 0 1 0 1H1.723A1.5 1.5 0 0 1 .421 12.24zm10.89 1.463a.5.5 0 1 0-.868.496l1.716 3.004a.5.5 0 0 1-.434.748h-5.57l.647-.646a.5.5 0 1 0-.708-.707l-1.5 1.5a.5.5 0 0 0 0 .707l1.5 1.5a.5.5 0 1 0 .708-.707l-.647-.647h5.57a1.5 1.5 0 0 0 1.302-2.244z" />
+			</svg>
+			<span class="TituloHeader text-white">EcoNavegación</span>
+		</a>
+		<button
+			class="navbar-toggler iconohamburguesa"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent"
+			aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link resaltado" aria-current="page" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link resaltado" href="secondarypages/imagenes.html">Imágenes</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link resaltado" href="secondarypages/contacto.html">Contacto</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link resaltado" href="secondarypages/nosotros.html">Nosotros</a>
+				</li>
+			</ul>
+			<!--buscador directamente en google-->
+			<form action="https://www.google.com/search" method="get" target="_blank" class="d-flex" role="search">
+				<input class="form-control me-2" name="q" type="search" placeholder="" aria-label="Search" />
+				<button class="btn btn-outline-success" type="submit">Buscar</button>
+			</form>
+		</div>
+	</div>
+</nav>
 <main>
-	<div class="d-flex flex-wrap gap-5 justify-content-center pt-3">
+	<h2 class="text-center pb-5 pt-3 page" id="pa1">Page 1</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center">
 		@for (elemento of todosLosDatos; track elemento.id) {
 		<div class="card">
 			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
 			<div class="card-body">
 				<h5 class="card-title text-center">{{ elemento.name }}</h5>
-				<p class="card-text text-center">{{ elemento.gender }} - {{ elemento.species }} - {{ elemento.status }}</p>
-				<p class="card-text text-center">{{ elemento.location.name }}</p>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li>
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
 			</div>
 		</div>
 		}
 	</div>
 	<hr />
-	<h2 class="text-center pb-5 page">Page 2</h2>
-	<div class="d-flex flex-wrap gap-5 justify-content-center pt-3">
+	<h2 class="text-center pb-5 page" id="pa2">Page 2</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center">
 		@for (elemento of todosLosDatos2; track elemento.id) {
 		<div class="card" style="border-radius: 50px">
 			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
 			<div class="card-body">
 				<h5 class="card-title text-center">{{ elemento.name }}</h5>
-				<p class="card-text text-center">{{ elemento.gender }} - {{ elemento.species }} - {{ elemento.status }}</p>
-				<p class="card-text text-center">{{ elemento.location.name }}</p>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li>
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="pa3">Page 3</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center">
+		@for (elemento of todosLosDatos3; track elemento.id) {
+		<div class="card" style="border-radius: 50px">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li>
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="pa4">Page 4</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center">
+		@for (elemento of todosLosDatos4; track elemento.id) {
+		<div class="card" style="border-radius: 50px">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li>
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="pa5">Page 5</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center">
+		@for (elemento of todosLosDatos5; track elemento.id) {
+		<div class="card" style="border-radius: 50px">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li>
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="pa6">Page 6</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center">
+		@for (elemento of todosLosDatos6; track elemento.id) {
+		<div class="card" style="border-radius: 50px">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li>
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="pa7">Page 7</h2>
+	<div class="d-flex flex-wrap gap-5 justify-content-center pb-5">
+		@for (elemento of todosLosDatos7; track elemento.id) {
+		<div class="card" style="border-radius: 50px">
+			<img src="{{ elemento.image }}" class="card-img-top" style="border-radius: 50px" alt="foto de {{ elemento.title }}" />
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Gender <br />
+						{{ elemento.gender }}
+					</li>
+					<li class="mx-4">
+						Species <br />
+						{{ elemento.species }}
+					</li>
+					<li>
+						Status <br />
+						{{ elemento.status }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.location.name }}</p>
 			</div>
 		</div>
 		}
 	</div>
 </main>
-<footer class="text-center py-5 bg-warning">&copy; 2024</footer>
+<footer class="text-center pb-5 bg-warning">&copy; 2024</footer>
 <!-- <router-outlet></router-outlet> -->
