--- a/rick-and-morty-app/src/app/app.component.css
+++ b/rick-and-morty-app/src/app/app.component.css
@@ -17,6 +17,13 @@ main {
 	font-style: normal;
 }
 
+.separador {
+	font-family: "Rock Salt", cursive;
+	font-weight: 600;
+	font-style: normal;
+	font-size: 25px;
+}
+
 @media only screen and (min-width: 601px) {
 	.header-img {
 		width: 30rem;
