--- a/rick-and-morty-app/src/app/app.component.html
+++ b/rick-and-morty-app/src/app/app.component.html
@@ -1,52 +1,59 @@
-<header class="text-center bg-dark">
-	<h1>
-		<img src="../assets/multimedia/title-ram.png" class="header-img" alt="rick and morty" />
-	</h1>
-	<p class="bg-warning p-4 m-0">Characters</p>
+<header class="text-center bg-dark" id="header">
+	<img src="../assets/multimedia/title-ram.png" class="header-img" alt="rick and morty" />
 </header>
-<nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
+<nav class="navbar navbar-expand-lg sticky-top bg-dark" data-bs-theme="dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
-			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-recycle resaltado" viewBox="0 0 16 16">
-				<path
-					d="M9.302 1.256a1.5 1.5 0 0 0-2.604 0l-1.704 2.98a.5.5 0 0 0 .869.497l1.703-2.981a.5.5 0 0 1 .868 0l2.54 4.444-1.256-.337a.5.5 0 1 0-.26.966l2.415.647a.5.5 0 0 0 .613-.353l.647-2.415a.5.5 0 1 0-.966-.259l-.333 1.242zM2.973 7.773l-1.255.337a.5.5 0 1 1-.26-.966l2.416-.647a.5.5 0 0 1 .612.353l.647 2.415a.5.5 0 0 1-.966.259l-.333-1.242-2.545 4.454a.5.5 0 0 0 .434.748H5a.5.5 0 0 1 0 1H1.723A1.5 1.5 0 0 1 .421 12.24zm10.89 1.463a.5.5 0 1 0-.868.496l1.716 3.004a.5.5 0 0 1-.434.748h-5.57l.647-.646a.5.5 0 1 0-.708-.707l-1.5 1.5a.5.5 0 0 0 0 .707l1.5 1.5a.5.5 0 1 0 .708-.707l-.647-.647h5.57a1.5 1.5 0 0 0 1.302-2.244z" />
-			</svg>
-			<span class="TituloHeader text-white">EcoNavegación</span>
-		</a>
+		<a class="navbar-brand" href="#"></a>
 		<button
-			class="navbar-toggler iconohamburguesa"
+			class="navbar-toggler"
 			type="button"
 			data-bs-toggle="collapse"
-			data-bs-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent"
+			data-bs-target="#navbarTogglerDemo02"
+			aria-controls="navbarTogglerDemo02"
 			aria-expanded="false"
 			aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item">
-					<a class="nav-link resaltado" aria-current="page" href="index.html">Home</a>
+		<div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+			<ul class="navbar-nav text-center">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Characters </a>
+					<ul class="dropdown-menu text-center">
+						<li><a class="dropdown-item" href="#pa1">Page 1</a></li>
+						<li><a class="dropdown-item" href="#pa2">Page 2</a></li>
+						<li><a class="dropdown-item" href="#pa3">Page 3</a></li>
+						<li><a class="dropdown-item" href="#pa4">Page 4</a></li>
+						<li><a class="dropdown-item" href="#pa5">Page 5</a></li>
+						<li><a class="dropdown-item" href="#pa6">Page 6</a></li>
+						<li><a class="dropdown-item" href="#pa7">Page 7</a></li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Locationes </a>
+					<ul class="dropdown-menu text-center">
+						<li><a class="dropdown-item" href="#lo1">Locationes 1</a></li>
+						<li><a class="dropdown-item" href="#lo2">Locationes 2</a></li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Episodes </a>
+					<ul class="dropdown-menu text-center">
+						<li><a class="dropdown-item" href="#ep1">Episodes 1</a></li>
+						<li><a class="dropdown-item" href="#ep2">Episodes 2</a></li>
+					</ul>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link resaltado" href="secondarypages/imagenes.html">Imágenes</a>
+					<a class="nav-link active" aria-current="page" href="#footer">Documentation</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link resaltado" href="secondarypages/contacto.html">Contacto</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link resaltado" href="secondarypages/nosotros.html">Nosotros</a>
+					<a class="nav-link active" aria-current="page" href="#header">Home</a>
 				</li>
 			</ul>
-			<!--buscador directamente en google-->
-			<form action="https://www.google.com/search" method="get" target="_blank" class="d-flex" role="search">
-				<input class="form-control me-2" name="q" type="search" placeholder="" aria-label="Search" />
-				<button class="btn btn-outline-success" type="submit">Buscar</button>
-			</form>
 		</div>
 	</div>
 </nav>
 <main>
+	<p class="bg-warning p-4 m-0 text-center separador">Characters</p>
 	<h2 class="text-center pb-5 pt-3 page" id="pa1">Page 1</h2>
 	<div class="d-flex flex-wrap gap-5 justify-content-center">
 		@for (elemento of todosLosDatos; track elemento.id) {
@@ -235,6 +242,109 @@
 		</div>
 		}
 	</div>
+	<p class="bg-warning p-4 m-0 text-center separador">Locationes</p>
+	<h2 class="text-center py-4 page" id="lo1">Locationes 1</h2>
+	<div class="row mx-3 gap-4 justify-content-center">
+		@for (elemento of todosLosDatos8; track elemento.id) {
+		<div class="card col-12 col-sm-5 col-lg-3" style="border-radius: 50px">
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Dimen <br />
+						{{ elemento.dimension }}
+					</li>
+					<li>
+						Type <br />
+						{{ elemento.type }}
+					</li>
+				</ul>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="lo2">Locationes 2</h2>
+	<div class="row mx-3 pb-3 gap-4 justify-content-center">
+		@for (elemento of todosLosDatos9; track elemento.id) {
+		<div class="card col-12 col-sm-5 col-lg-3" style="border-radius: 50px">
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Dimension <br />
+						{{ elemento.dimension }}
+					</li>
+					<li>
+						Type <br />
+						{{ elemento.type }}
+					</li>
+				</ul>
+			</div>
+		</div>
+		}
+	</div>
+	<p class="bg-warning p-4 m-0 text-center separador">Episodes</p>
+	<h2 class="text-center py-4 page" id="ep1">Episodes 1</h2>
+	<div class="row mx-3 pb-3 gap-4 justify-content-center">
+		@for (elemento of todosLosDatos10; track elemento.id) {
+		<div class="card col-12 col-sm-5 col-lg-3" style="border-radius: 50px">
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Episode <br />
+						{{ elemento.episode }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.created }}</p>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.air_date }}</p>
+			</div>
+		</div>
+		}
+	</div>
+	<hr />
+	<h2 class="text-center pb-5 page" id="ep2">Episodes 2</h2>
+	<div class="row mx-3 pb-3 gap-4 justify-content-center">
+		@for (elemento of todosLosDatos11; track elemento.id) {
+		<div class="card col-12 col-sm-5 col-lg-3" style="border-radius: 50px">
+			<div class="card-body">
+				<h5 class="card-title text-center">{{ elemento.name }}</h5>
+				<ul class="d-flex flex-wrap justify-content-around px-1 text-center">
+					<li>
+						Episode <br />
+						{{ elemento.episode }}
+					</li>
+				</ul>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.created }}</p>
+				<p class="card-text text-center text-decoration-underline">{{ elemento.air_date }}</p>
+			</div>
+		</div>
+		}
+	</div>
 </main>
-<footer class="text-center pb-5 bg-warning">&copy; 2024</footer>
+<footer class="bg-dark text-white py-4" id="footer">
+	<div class="d-flex flex-md-row flex-column justify-content-around align-items-center">
+		<div>
+			<a class="px-2" href="https://github.com/andrespeco0987?tab=repositories" target="_blank">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-github" viewBox="0 0 16 16">
+					<path
+						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" /></svg
+			></a>
+			<a href="https://www.instagram.com/andrespeco0987/" target="_blank">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-instagram" viewBox="0 0 16 16">
+					<path
+						d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" /></svg
+			></a>
+		</div>
+		<br />
+		<div>&copy; 2024</div>
+		<br />
+		<div>
+			<a class="text-decoration-none text-white ms-3" href="https://rickandmortyapi.com/documentation" target="_blank">Docs</a>
+			<a class="text-decoration-none text-white px-2" href="https://rickandmortyapi.com/" target="_blank">Api</a>
+			<a class="text-decoration-none text-white" href="https://rickandmortyapi.com/about" target="_blank">About</a>
+		</div>
+	</div>
+</footer>
 <!-- <router-outlet></router-outlet> -->
